# DosCardGame

./: Cargo.toml  README.md
client/: Cargo.toml
client/assets/: background.wgsl
client/assets/shaders/: background.wgsl
client/raw_assets/: glow.xcf
client/src/: connections.rs  game.rs  game_network.rs  graphics.rs  lobby.rs  lobby_network.rs  main.rs  mainmenu_ui.rs  multiplayer.rs
client/src/game/: arrange_table.rs  assets.rs  call_dos.rs  camera.rs  card_indexing.rs  card_tracker.rs  client_game.rs  components.rs  dealing.rs  game_manager.rs  graphics.rs  make_tables.rs  mod.rs  mouse.rs  mouse_over.rs  networking.rs  play_card.rs  populate_deck.rs  setup_table.rs  sync.rs  table.rs  targeting.rs  transfer_card.rs
client/src/game/animations/: components.rs  mod.rs  mouse_focus.rs  systems.rs
client/src/game/card_building/: mod.rs  systems.rs  templates.rs
client/src/game/client_actions/: mod.rs  play_card.rs  select_wild_color.rs
client/src/game/game_manager/: animation_entity_tracker.rs  entity_manipulation.rs  local_player_state.rs
client/src/game/graphics/: animations.rs  arange.rs  assets.rs  background.rs  camera.rs  card_indexing.rs  deck.rs  interface_constants.rs  mod.rs  remove_cards.rs  setup_graphics.rs  spawn_card.rs  turn_direction_indicator.rs
client/src/game/graphics/animations/: card_effects.rs  entity_tracker.rs  (+8 more)
client/src/game/input/: call_dos_button.rs  draw_button.rs  mod.rs  play_card.rs  select_wild_color.rs
client/src/game/layout/: constants.rs  expressions.rs  mod.rs
client/src/game/manager/: entity_tracker.rs  interface_manager.rs  local_player_state.rs  mod.rs  mouse_focus.rs  setup.rs  targeting.rs
client/src/game/networking/: from_server.rs  mod.rs
client/src/game/server_actions/: dealing.rs  mod.rs
client/src/game/table/: animation_tracker.rs  card_tracker.rs  client_table.rs  memorized_cards.rs  mod.rs  transfer.rs
client/src/lobby/: connecting.rs  connections.rs  login_manager.rs  mod.rs  networking.rs  onboarding_ui.rs  ui.rs  user_api.rs
client/src/postgame/: mod.rs  ui.rs
client/src/reconnect/: mod.rs  ui.rs
server/: Cargo.toml
server/src/: connection_listening.rs  connections.rs  game.rs  game_network.rs  lobby.rs  lobby_network.rs  main.rs  multiplayer.rs  postgame.rs
server/src/game/: call_dos.rs  card_tracker.rs  connections.rs  deal.rs  game_info.rs  memorized_cards.rs  mod.rs  networking.rs  server_game.rs  setup.rs  sync.rs  table.rs
server/src/lobby/: connections.rs  mod.rs  networking.rs
server/src/reconnect/: connections.rs  mod.rs  networking.rs
shared/: Cargo.toml
shared/src/: cards.rs  channel_config.rs  dos_game.rs  game_info.rs  lib.rs  messages.rs  net_config.rs  table.rs  table_map.rs  table_map_setup.rs  test.rs  transfer.rs
shared/src/base/: agent.rs
(+22 files in other folders)
