[package]
name = "dos-client"
version = "0.1.0"
edition = "2021"
description = "Client for a multiplayer UNO clone written in rust with Bevy"
repository = "https://github.com/sporadic0/DosCardGame"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "UNO", "multiplayer"]
categories = ["games"]

[dependencies]
dos-shared = { path = "../shared" }

bevy = "0.8.0"
bevy_renet = "0.0.5"
iyes_loopless = "0.7.0"
bincode = "1.3.3"
futures-lite = "1.12.0"

bevy_egui = "0.16.0"
bevy_mod_picking = "0.9.0"
